k3s/wordpress/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress  # ✅ même nom que celui dans l'Ingress
  namespace: mjallouli-project1
spec:
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP  # ✅ Suffisant pour l’Ingress, plus propre que NodePort
