k3s/wordpress/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: wordpress

  namespace: mjallouli-project1

  annotations:

    kubernetes.io/ingress.class: traefik

spec:

  rules:

    - host: wp.20.162.255.135.nip.io

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: wordpress

                port:

                  number: 80
